Fix spacing issue on instructions page

--- a/compass/scss/screen.scss
+++ b/compass/scss/screen.scss
@@ -85,6 +85,7 @@ ul.errorlist {
     li {
       display: list-item;
     }
+    margin-bottom: 1.5em;
   }
 }
 
